Fixed z-index issue with nav, added project 3-4 to website. fixed some styling issues

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -129,6 +129,7 @@ header {
     position: fixed;
     top: 0;
     margin-top: 15px;
+    z-index: 90;
     
     p{
         color: $baseFC;
