--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -46,9 +46,10 @@
     min-height: 860px;
     background-image:url('../assets/sectionImage2.png') ;
     background-size: cover;
+    transition: all 0.5s ease-in-out;
+
         &:hover{
             border-top: solid rgb(236, 199, 199) 40px;
-            transition: all 0.5s ease-in-out;
 
         }
     .wrapper{
@@ -109,9 +110,10 @@
     background-image: url('../assets/sectionImage.png');
     background-size: cover;
     padding-bottom: 75px;
+    transition: all 0.5s ease-in-out;
+
     &:hover{
         border-top: solid rgb(236, 199, 199) 40px;
-        transition: all 0.5s ease-in-out;
 
     }
     .wrapper{
@@ -197,15 +199,21 @@
             &:focus{
                 background-color: rgb(0, 116, 154);
             }
+            &:focus-within{
+                opacity: 1;
+            }
           }
         .imgWrap:hover .projectContent{
             opacity: 1;
-            z-index: 10;
+            border-radius: 5px;
+           
 
         }
         img {
             width: 100%;
-            box-shadow:0 0 20px white ;
+            box-shadow: 0px 0px 20px rgba(173, 173, 173, 0.5);
+            border-radius: 5px;
+   
         }
         #firstProject {
             margin-right: 150px;
@@ -237,9 +245,10 @@
     min-height: 860px;
     background-image: url('../assets/sectionImage3.png');
     background-size: cover;
+    transition: all 0.5s ease-in-out;
+
     &:hover{
         border-top: solid rgb(236, 199, 199) 40px;
-        transition: all 0.5s ease-in-out;
 
     }
     .wrapper{
@@ -257,7 +266,6 @@
     form{
         margin-top: 100px;
         width: 75%;
-        box-shadow: 0 0 150px white;
     }
     .form-group {
     display: flex;
