--- a/styles/styls.css
+++ b/styles/styls.css
@@ -160,6 +160,7 @@ header .text h2 {
   position: fixed;
   top: 0;
   margin-top: 15px;
+  z-index: 90;
 }
 .navBar p {
   color: #e6dedd;
@@ -384,11 +385,11 @@ header .text h2 {
   min-height: 860px;
   background-image: url("../assets/sectionImage2.png");
   background-size: cover;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .skills:hover {
   border-top: solid rgb(236, 199, 199) 40px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
 }
 .skills .wrapper {
   width: 80%;
@@ -465,11 +466,11 @@ header .text h2 {
   background-image: url("../assets/sectionImage.png");
   background-size: cover;
   padding-bottom: 75px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .projects:hover {
   border-top: solid rgb(236, 199, 199) 40px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
 }
 .projects .wrapper {
   height: 100%;
@@ -581,14 +582,18 @@ header .text h2 {
 .projects .wrapper .projectContent:focus {
   background-color: rgb(0, 116, 154);
 }
+.projects .wrapper .projectContent:focus-within {
+  opacity: 1;
+}
 .projects .wrapper .imgWrap:hover .projectContent {
   opacity: 1;
-  z-index: 10;
+  border-radius: 5px;
 }
 .projects .wrapper img {
   width: 100%;
-  -webkit-box-shadow: 0 0 20px white;
-          box-shadow: 0 0 20px white;
+  -webkit-box-shadow: 0px 0px 20px rgba(173, 173, 173, 0.5);
+          box-shadow: 0px 0px 20px rgba(173, 173, 173, 0.5);
+  border-radius: 5px;
 }
 .projects .wrapper #firstProject {
   margin-right: 150px;
@@ -610,11 +615,11 @@ header .text h2 {
   min-height: 860px;
   background-image: url("../assets/sectionImage3.png");
   background-size: cover;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .contact:hover {
   border-top: solid rgb(236, 199, 199) 40px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
 }
 .contact .wrapper {
   width: 80%;
@@ -639,8 +644,6 @@ header .text h2 {
 .contact form {
   margin-top: 100px;
   width: 75%;
-  -webkit-box-shadow: 0 0 150px white;
-          box-shadow: 0 0 150px white;
 }
 .contact .form-group {
   display: -webkit-box;
